fix: replace property text-align with margin at body selector

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  text-align: center;
+  margin: auto;
   background-color: rgb(55,18,92);
 }
 section {
